<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewCliente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >


    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/detalhesCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalhes_do_cliente"
            android:textSize="22sp"
            android:layout_marginBottom="33dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_cliente"
            android:textColor="?android:attr/textColorPrimary"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/nomeCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/emailCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefone"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/telefoneCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/celularCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v_local"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/localCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obs_cliente"
            style="@style/Descricao_texto"/>

            <TextView
                android:id="@+id/observacoesCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="22dp"
                style="@style/Descricao_texto"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <Button
                android:id="@+id/btn_anterior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Anterior"
                android:drawableLeft="@drawable/baseline_arrow_left_24"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_proximo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Próximo"
                android:drawableRight="@drawable/outline_arrow_right_24"
                android:layout_weight="1" />

        </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp">
            <Button
                android:id="@+id/btn_editar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Cadastrar"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_excluir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Excluir"
                android:layout_weight="1" />

</LinearLayout>

</LinearLayout>